--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,12 +15,12 @@
         <a href="/">Just Tech News</a>
       </h1>
 			<nav>
-				<a href="/login">login</a>
-			</nav>
-			<nav>
+				{{#if loggedIn}}
 				<button id="logout" class="btn-no-style">logout</button>
+				{{else}}
 				<a href="/login">login</a>
-			</nav>			
+				{{/if}}
+			</nav>
     </header>
     <main>
       {{{ body }}}
@@ -30,7 +30,9 @@
     </footer>
   </div>
 
+	{{#if loggedIn}}
 	<script src="/javascript/logout.js"></script>
+	{{/if}}
 </body>
 
 </html>
